# roast-as-a-service

./: .gitignore  .npmignore  README.md  composer.json  index.html  load_test.js  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/: client.js  index.html  manifest.json
api/bn/: roasts-bn-1.json
api/en/: roasts-en-1.json
assets/: style.css
postman/: roast-as-a-service.postman_collection.json
roast_api/: __init__.py  client.py
src/: RaaS.php
